--- a/style.css
+++ b/style.css
@@ -66,5 +66,7 @@ button {
     top: 10px;
     right: 20px;
     font-size: 24px;
+    font-weight: bold;
     cursor: pointer;
+    color: #333;
 }
