--- a/style.css
+++ b/style.css
@@ -52,21 +52,39 @@ button {
 }
 
 .modal-content {
-    background-color: #fff;
+    background-color: rgba(96, 97, 38, 0.9);
     padding: 20px;
     border-radius: 8px;
     width: 80%;
     max-width: 300px;
     text-align: center;
-    color: #333;
+    color: #fff;
 }
 
 .close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 24px;
+    color: #fff;
+    float: right;
+    font-size: 28px;
     font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
     cursor: pointer;
-    color: #333;
+}
+
+.close-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: yellow;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.close-button:hover {
+    background-color: #fff;
 }
